新增菜单管理和资源管理